// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: stories > Ant stories > Story Tagged 1`] = `
"<div contenteditable="true">
  <span>We preset five different colors. You can set color property such as </span>
  <span contenteditable="false">
    <span>success</span>
  </span>
  <span>, </span>
  <span contenteditable="false">
    <span>processing</span>
  </span>
  <span>, </span>
  <span contenteditable="false">
    <span>error</span>
  </span>
  <span>, </span>
  <span contenteditable="false">
    <span>default</span>
  </span>
  <span> and </span>
  <span contenteditable="false">
    <span>warning</span>
  </span>
  <span> to show specific status.</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Chipped 1`] = `
"<div contenteditable="true">
  <span>Hello beautiful the </span>
  <span contenteditable="false">
    <div>
      <span>first</span>
    </div>
  </span>
  <span> world from the </span>
  <span contenteditable="false">
    <div>
      <span>second</span>
    </div>
  </span>
  <span> </span>
</div>"
`;

exports[`Component: stories > Material stories > Story Mentions 1`] = `
"<div contenteditable="true">
  <span>Enter the '@' for calling mention list:&#10;- Hello @Agustina and </span>
  <span contenteditable="false">
    <div>
      <div>R</div>
      <span>Ruslan</span>
    </div>
  </span>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Overridden 1`] = `
"<div>
  <div contenteditable="true">
    <span>Hello beautiful the </span>
    <span contenteditable="false">
      <div>
        <span>first</span>
      </div>
    </span>
    <span> world from the </span>
    <span contenteditable="false">
      <div>
        <span>second</span>
      </div>
    </span>
    <span> </span>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Avatars 1`] = `
"<div>
  <div>
    <section>
      <div>Avatar / AvatarStack</div>
      <div>
        <span title="Kara Vance">KV</span>
        <span title="Ines Duarte">ID</span>
        <span title="Milo Freeman">MF</span>
        <span title="Priya Raman">PR</span>
        <span title="Tomas Alvarez">TA</span>
        <span title="Wen Li">WL</span>
      </div>
      <div>
        <span>
          <span title="Kara Vance">KV</span>
          <span title="Ines Duarte">ID</span>
          <span>+4 others</span>
        </span>
        <span>
          <span title="Kara Vance">KV</span>
          <span title="Ines Duarte">ID</span>
          <span title="Milo Freeman">MF</span>
        </span>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Bookmark 1`] = `
"<div>
  <div>
    <section>
      <div>BookmarkCard</div>
      <div>
        <span>
          <span>Auth migration — rollout plan</span>
          <span>How the auth migration changes token lifetimes, and what breaks if it slips past the launch date.</span>
          <span>https://example.com/apollo/auth-migration</span>
        </span>
        <span></span>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Callouts 1`] = `
"<div>
  <div>
    <section>
      <div>Callout</div>
      <div>
        <span>💡</span>
        <div>Neutral: the default wash, for a note with no urgency.</div>
      </div>
      <div>
        <span>ℹ️</span>
        <div>Info: the auth migration lands on the 14th.</div>
      </div>
      <div>
        <span>✅</span>
        <div>Success: beta sign-off received from both regions.</div>
      </div>
      <div>
        <span>⚠️</span>
        <div>Warning: launch gating on the auth migration.</div>
      </div>
      <div>
        <span>🚨</span>
        <div>Danger: the vendor SLA is still unsigned.</div>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Chips 1`] = `
"<div>
  <div>
    <section>
      <div>Chip</div>
      <div>
        <span>Plain</span>
        <span>Planned</span>
        <span>Blocked</span>
        <span>In progress</span>
        <span>Done</span>
        <span>Platform</span>
        <span>Design</span>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Chrome 1`] = `
"<div>
  <div>
    <section>
      <div>PageChrome / CoverBand</div>
      <div>
        <span>Product</span>
        <span>/</span>
        <span>Launches</span>
        <span>/</span>
        <span>Apollo</span>
        <div>
          <span>Edited 14m ago</span>
          <button type="button">Share</button>
          <button aria-label="More actions" type="button">…</button>
        </div>
      </div>
      <div></div>
      <div>🚀</div>
      <div>Apollo — Q2 launch plan</div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Comments 1`] = `
"<div>
  <div>
    <section>
      <div>CommentThread</div>
      <div>
        <div>
          <span title="Kara Vance">KV</span>
          <div>
            <span>Kara Vance</span>
            <span>2h ago</span>
          </div>
          <div>Can we confirm the EU quota before Friday?</div>
        </div>
        <div>
          <span title="Milo Freeman">MF</span>
          <div>
            <span>Milo Freeman</span>
            <span>41m ago</span>
          </div>
          <div>Asked the vendor this morning — expecting an answer tomorrow.</div>
        </div>
        <button type="button">Reply…</button>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Effort 1`] = `
"<div>
  <div>
    <section>
      <div>EffortBar</div>
      <div>
        <span title="Effort, not started">
          <span></span>
        </span>
        <span title="Effort, a third">
          <span></span>
        </span>
        <span title="Effort, most">
          <span></span>
        </span>
        <span title="Effort, complete">
          <span></span>
        </span>
        <span title="Effort, clamped">
          <span></span>
        </span>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Empty 1`] = `
"<div>
  <div>
    <span>Product</span>
    <span>/</span>
    <span>Launches</span>
    <span>/</span>
    <span>Apollo</span>
    <div>
      <span>Edited 14m ago</span>
      <button type="button">Share</button>
      <button aria-label="More actions" type="button">…</button>
    </div>
  </div>
  <div>
    <div></div>
    <div>🚀</div>
    <div contenteditable="true">
      <div data-placeholder="Type / for commands…">
        <span></span>
      </div>
      <div contenteditable="false"></div>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Metrics 1`] = `
"<div>
  <div>
    <section>
      <div>MetricCard / CardGrid</div>
      <div>
        <div>
          <span>Beta users</span>
          <span>4,120</span>
        </div>
        <div>
          <span>p95 latency</span>
          <span>184ms</span>
        </div>
        <div>
          <span>Crash-free</span>
          <span>99.4%</span>
        </div>
        <div>
          <span>Open bugs</span>
          <span>37</span>
        </div>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Properties 1`] = `
"<div>
  <div>
    <section>
      <div>PropertiesPanel</div>
      <div>
        <span>Status</span>
        <span>
          <span>In progress</span>
        </span>
        <span>Owner</span>
        <span>
          <span title="Kara Vance">KV</span>
          Kara Vance
        </span>
        <span>Team</span>
        <span>
          <span>
            <span title="Kara Vance">KV</span>
            <span title="Ines Duarte">ID</span>
            <span>+4 others</span>
          </span>
        </span>
        <span>Timeline</span>
        <span>Apr 8 → Jun 30</span>
        <span>Tags</span>
        <span>
          <span>Platform</span>
          <span>Design</span>
          <span>Q2</span>
        </span>
        <span>Spec</span>
        <span>
          <a href="https://example.com/apollo/spec">apollo/spec</a>
        </span>
        <span>Confidence</span>
        <span>82%</span>
        <button type="button">+ Add a property</button>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Showcase 1`] = `
"<div>
  <div>
    <span>Product</span>
    <span>/</span>
    <span>Launches</span>
    <span>/</span>
    <span>Apollo</span>
    <div>
      <span>Edited 14m ago</span>
      <button type="button">Share</button>
      <button aria-label="More actions" type="button">…</button>
    </div>
  </div>
  <div>
    <div></div>
    <div>🚀</div>
    <div contenteditable="true">
      <div>
        <span>Apollo — Q2 launch plan</span>
      </div>
      <div>
        <div>
          <span>Status</span>
          <span>
            <span>
              <span>In progress</span>
            </span>
          </span>
          <span>Owner</span>
          <span>
            <span>
              <span title="Kara Vance">KV</span>
              Kara Vance
            </span>
          </span>
          <span>Team</span>
          <span>
            <span>
              <span>
                <span title="Kara Vance">KV</span>
                <span title="Ines Duarte">ID</span>
                <span title="Milo Freeman">MF</span>
                <span>+3 others</span>
              </span>
            </span>
          </span>
          <span>Timeline</span>
          <span>
            <span>Apr 8 → Jun 30</span>
          </span>
          <span>Tags</span>
          <span>
            <span>
              <span>Platform</span>
            </span>
            <span>
              <span>Design</span>
            </span>
            <span>Q2</span>
          </span>
          <span>Spec</span>
          <span>
            <span>
              <span title="https://example.com/apollo/spec">apollo/spec</span>
            </span>
          </span>
          <span>Confidence</span>
          <span>
            <span>82%</span>
          </span>
          <button type="button">+ Add a property</button>
        </div>
      </div>
      <div>
        <span></span>
        <span></span>
      </div>
      <div data-placeholder="Type / for commands…">
        <span>Apollo moves the collaboration layer from beta to general availability. Ownership sits with </span>
        <span contenteditable="false">
          <span>@Platform</span>
        </span>
        <span>, and </span>
        <span>
          <span>
            <span>
              <span>launch gating on the auth migration</span>
            </span>
          </span>
        </span>
        <span> is what everything downstream assumes.</span>
      </div>
      <div>
        <span>Launch tasks</span>
        <span>Sprint board</span>
        <span>Metrics &amp; risks</span>
        <span>Decision log</span>
      </div>
      <div>
        <span>Launch tasks</span>
      </div>
      <div>
        <span>Inline database · 24 items</span>
      </div>
      <div>
        <span contenteditable="false">
          <div>
            <div role="tablist">
              <button aria-selected="true" role="tab" type="button">Table</button>
              <button aria-selected="false" role="tab" type="button">Board</button>
              <button aria-selected="false" role="tab" type="button">Timeline</button>
              <button aria-selected="false" role="tab" type="button">Calendar</button>
            </div>
            <div>
              <button type="button">Filter</button>
              <button type="button">Sort</button>
              <button type="button">New</button>
            </div>
          </div>
        </span>
      </div>
      <div>
        <span>
          <div>
            <span>Task</span>
          </div>
          <div>
            <span>Status</span>
          </div>
          <div>
            <span>Owner</span>
          </div>
          <div>
            <span>Due</span>
          </div>
          <div>
            <span>Effort</span>
          </div>
        </span>
      </div>
      <div>
        <span>
          <div>
            <span>Auth service migration</span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>Blocked</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Kara Vance">KV</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>2026-04-02</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Effort 0.2">
                <span></span>
              </span>
            </span>
            <span></span>
          </div>
        </span>
      </div>
      <div>
        <span>
          <div>
            <span>Realtime sync engine</span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>In progress</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Milo Freeman">MF</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>2026-04-18</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Effort 0.6">
                <span></span>
              </span>
            </span>
            <span></span>
          </div>
        </span>
      </div>
      <div>
        <span>
          <div>
            <span>Pricing page rewrite</span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>Done</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Ines Duarte">ID</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>2026-03-27</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Effort 1">
                <span></span>
              </span>
            </span>
            <span></span>
          </div>
        </span>
      </div>
      <div>
        <span>
          <div>
            <span>Load test at 5× peak</span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>Planned</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Priya Raman">PR</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>2026-05-06</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Effort 0">
                <span></span>
              </span>
            </span>
            <span></span>
          </div>
        </span>
      </div>
      <div>
        <span>
          <div>
            <span>Vendor SLA sign-off</span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>At risk</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Tomas Alvarez">TA</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span>2026-04-09</span>
            </span>
            <span></span>
          </div>
          <div>
            <span></span>
            <span contenteditable="false">
              <span title="Effort 0.35">
                <span></span>
              </span>
            </span>
            <span></span>
          </div>
        </span>
      </div>
      <div>
        <button type="button" contenteditable="false">+ New</button>
        <span>
          <span>Count 24 · 9 done</span>
        </span>
      </div>
      <div>
        <span>Sprint board</span>
      </div>
      <div>
        <span contenteditable="false">
          <div>
            <div>
              <div>
                <span>To do</span>
                <span>3</span>
              </div>
              <div draggable="true">
                <span>Sign the vendor SLA</span>
                <span>Legal</span>
              </div>
              <div draggable="true">
                <span>EU region quota</span>
                <span>Infra</span>
              </div>
              <div draggable="true">
                <span>Launch copy review</span>
              </div>
            </div>
            <div>
              <div>
                <span>In progress</span>
                <span>2</span>
              </div>
              <div draggable="true">
                <span>Auth migration</span>
                <span>Platform</span>
              </div>
              <div draggable="true">
                <span>p95 latency budget</span>
                <span>Perf</span>
              </div>
            </div>
            <div>
              <div>
                <span>Shipped</span>
                <span>1</span>
              </div>
              <div draggable="true">
                <span>Beta invites</span>
                <span>Growth</span>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div>
        <span>Metrics &amp; risks</span>
      </div>
      <div>
        <div>
          <div>
            <span>Beta users</span>
            <span>4,120</span>
          </div>
          <div>
            <span>p95 latency</span>
            <span>184ms</span>
          </div>
          <div>
            <span>Crash-free</span>
            <span>99.4%</span>
          </div>
          <div>
            <span>Open bugs</span>
            <span>37</span>
          </div>
        </div>
      </div>
      <div>
        <div>
          <span>
            <button type="button" contenteditable="false">🚨</button>
          </span>
          <div>
            <span>Launch gating on the auth migration — GA holds only if cutover lands by 2026-04-09.</span>
          </div>
        </div>
      </div>
      <div>
        <span>Risks</span>
      </div>
      <div>
        <span contenteditable="false"></span>
        <span>Vendor SLA unsigned</span>
      </div>
      <div>
        <span contenteditable="false"></span>
        <span>EU region capacity unconfirmed</span>
        <span>
          <div>
            <span contenteditable="false"></span>
            <span>Awaiting quota approval</span>
          </div>
        </span>
      </div>
      <div>
        <span contenteditable="false"></span>
        <span>Support headcount at 60%</span>
      </div>
      <div>
        <input type="checkbox" contenteditable="false">
        <span>
          <span>Confirm the EU quota with the vendor</span>
        </span>
      </div>
      <div>
        <input type="checkbox" checked="" contenteditable="false">
        <span>
          <span>Signed off by Platform</span>
        </span>
      </div>
      <div>
        <span>Decision log</span>
      </div>
      <div>
        <button aria-expanded="false" aria-label="Expand" type="button" contenteditable="false"></button>
        <span>Why we cut the Android target</span>
        <div hidden="until-found">
          <span>
            <div data-placeholder="Type / for commands…">
              <span>Shipping three platforms at once puts the auth migration on the critical path twice.</span>
            </div>
            <div>
              <span contenteditable="false"></span>
              <span>Auth migration owns the critical path.</span>
            </div>
            <div>
              <span contenteditable="false"></span>
              <span>Three platforms at once doubles the QA matrix.</span>
            </div>
          </span>
        </div>
      </div>
      <div>
        <button aria-expanded="false" aria-label="Expand" type="button" contenteditable="false"></button>
        <span>Single-region GA first</span>
        <div hidden="until-found">
          <span>
            <div data-placeholder="Type / for commands…">
              <span>EU capacity is unconfirmed, so a second region is a launch risk with no launch benefit.</span>
            </div>
          </span>
        </div>
      </div>
      <div>
        <button aria-expanded="false" aria-label="Expand" type="button" contenteditable="false"></button>
        <span>Adopt CRDT over OT</span>
        <div hidden="until-found">
          <span>
            <div data-placeholder="Type / for commands…">
              <span>Presence and offline edits fall out of the same merge; OT needed a server for each.</span>
            </div>
          </span>
        </div>
      </div>
      <div>
        <span>Canary procedure</span>
      </div>
      <div>
        <select contenteditable="false">
          <option>bash</option>
          <option>ts</option>
          <option>json</option>
          <option>sql</option>
        </select>
        <span>apollo deploy --env=staging --canary=5%&#10;# → rollout 5% · healthy · p95 184ms</span>
      </div>
      <div>
        <span>If the cutover isn't boring, we're not ready to call it GA.</span>
      </div>
      <div>
        <div>
          <span>
            <span>Auth migration — rollout plan</span>
            <span>How the auth migration changes token lifetimes, and what breaks if it slips.</span>
            <span>https://example.com/apollo/auth-migration</span>
          </span>
          <span></span>
        </div>
      </div>
      <div>
        <span contenteditable="false">
          <div>
            <div>
              <span title="Kara Vance">KV</span>
              <div>
                <span>Kara Vance</span>
                <span>2h ago</span>
              </div>
              <div>Can we confirm the EU quota before Friday?</div>
            </div>
            <div>
              <span title="Milo Freeman">MF</span>
              <div>
                <span>Milo Freeman</span>
                <span>41m ago</span>
              </div>
              <div>Asked the vendor this morning — expecting an answer tomorrow.</div>
            </div>
            <button type="button">Reply…</button>
          </div>
        </span>
      </div>
      <div data-placeholder="Type / for commands…">
        <span></span>
      </div>
      <div contenteditable="false"></div>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story SprintBoard 1`] = `
"<div>
  <div>
    <section>
      <div>Board / BoardColumn / BoardCard</div>
      <div>
        <div>
          <div>
            <span>To do</span>
            <span>3</span>
          </div>
          <div draggable="true">
            <span>Sign the vendor SLA</span>
            <span>Legal</span>
          </div>
          <div draggable="true">
            <span>EU region quota</span>
            <span>Infra</span>
          </div>
          <div draggable="true">
            <span>Launch copy review</span>
          </div>
        </div>
        <div>
          <div>
            <span>In progress</span>
            <span>2</span>
          </div>
          <div draggable="true">
            <span>Auth migration</span>
            <span>Platform</span>
          </div>
          <div draggable="true">
            <span>p95 latency budget</span>
            <span>Perf</span>
          </div>
        </div>
        <div>
          <div>
            <span>Shipped</span>
            <span>1</span>
          </div>
          <div draggable="true">
            <span>Beta invites</span>
            <span>Growth</span>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Notion stories > Story Tabs 1`] = `
"<div>
  <div>
    <section>
      <div>ViewTabs</div>
      <div>
        <div role="tablist">
          <button aria-selected="true" role="tab" type="button">Table</button>
          <button aria-selected="false" role="tab" type="button">Board</button>
          <button aria-selected="false" role="tab" type="button">Timeline</button>
          <button aria-selected="false" role="tab" type="button">Calendar</button>
        </div>
        <div>
          <button type="button">Filter</button>
          <button type="button">Sort</button>
          <button type="button">New</button>
        </div>
      </div>
    </section>
  </div>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story Overridden 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>tag</span>
    </div>
  </span>
  <span>. Then press the </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>Enter</span>
    </div>
  </span>
  <span> to finish. For example: @hello</span>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story TaggedInput 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>tag</span>
    </div>
  </span>
  <span>. Then press the </span>
  <span contenteditable="false">
    <div data-size="md">
      <span>Enter</span>
    </div>
  </span>
  <span> to finish. For example: @hello</span>
</div>"
`;
